# delta-ruby

./: CHANGELOG.md  Gemfile  README.md  Rakefile  deltalake-rb.gemspec
.github/workflows/: build.yml  release.yml
ext/deltalake/: Cargo.toml  extconf.rb
ext/deltalake/src/: error.rs  lib.rs  merge.rs  ruby.rs  schema.rs  utils.rs
lib/: deltalake.rb
lib/deltalake/: table.rb  table_optimizer.rb  version.rb
test/: alter_test.rb  merge_test.rb  optimize_test.rb  table_test.rb  test_helper.rb  types_test.rb  write_test.rb
