[package]
name = "deltalake"
version = "0.2.4"
license = "Apache-2.0"
authors = ["Andrew Kane <andrew@ankane.org>"]
edition = "2021"
rust-version = "1.82"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
arrow = { version = "56", features = ["ffi"] }
arrow-schema = { version = "56", features = ["serde"] }
chrono = "0.4"
delta_kernel = { version = "0.16", features = ["arrow-56", "default-engine-rustls"] }
futures = "0.3"
magnus = "0.8"
num_cpus = "1"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }

[dependencies.deltalake]
version = "=0.29.3"
features = [
    "azure",
    "datafusion",
    "gcs",
    "s3"
]
