[package]
name = "deltalake-ruby"
version = "0.2.8"
license = "Apache-2.0"
authors = ["Andrew Kane <andrew@ankane.org>"]
edition = "2021"
rust-version = "1.82"
publish = false

[lib]
name = "deltalake"
crate-type = ["cdylib"]

[dependencies]
arrow = { version = "57", features = ["ffi"] }
arrow-schema = { version = "57", features = ["serde"] }
chrono = "0.4"
delta_kernel = { version = "0.19", features = ["arrow-57", "default-engine-rustls"] }
futures = "0.3"
magnus = "0.8"
num_cpus = "1"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dependencies.deltalake]
version = "=0.30.2"
features = [
    "azure",
    "datafusion",
    "gcs",
    "s3"
]
