[package]
name = "deltalake-ruby"
version = "0.2.9"
license = "Apache-2.0"
authors = ["Andrew Kane <andrew@ankane.org>"]
edition = "2021"
rust-version = "1.82"
publish = false

[lib]
name = "deltalake"
crate-type = ["cdylib"]

[dependencies]
arrow = { version = "58", features = ["ffi"] }
arrow-schema = { version = "58", features = ["serde"] }
chrono = "0.4"
delta_kernel = { package = "buoyant_kernel", version = "0.21", features = ["arrow-58", "default-engine-rustls"] }
futures = "0.3"
magnus = "0.8"
num_cpus = "1"
rb-sys = "0.9"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dependencies.deltalake]
version = "=0.32.0"
features = [
    "azure",
    "datafusion",
    "gcs",
    "s3"
]
